# dashboard

./: LICENSE  README.md  app.py  pyproject.toml  style.css
src/pages/: about.py  contribute.py  dashboard.py  data.py  home.py
src/pages/utils/: fetch_url.py  load_css.py  load_data.py  load_time_series.py
