[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Streamlit UI"
authors = ["Olaf Bochmann"]

[tool.poetry.dependencies]
python = "3.7.6"
pandas = "@^1.0.5"
numpy = "^1.19.0"
streamlit = "^0.62.0"
plotly = "^4.8.2"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
